--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>传统的鬼王</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
@@ -17,28 +17,101 @@
   <body>
     <div id="app"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
     <script>
       window.$docsify = {
-        name: "Rameo", // 主页名称
-        repo: "https://github.com/rameosu/rameo", // 你的github地址
+        // 是否开启封面
+        coverpage: true,
+        // 主页名称
+        name: "ZXW学习笔记",
+        // 点击标题后的跳转地址
+        nameLink: "/",
+        // github地址
+        repo: "https://github.com/rameosu/rameo",
+        // 切换页面后跳回页面顶部
         auto2top: true,
-        coverpage: true, // 封面
-        loadSidebar: true, // 侧边栏
+        // 侧边栏左侧的logo
+        logo: "",
+        // 是否开启侧边栏
+        loadSidebar: true,
+        // 读取md文件中最大几级目录
+        subMaxLevel: 5,
+        // 移动设备合并导航栏到侧边栏
+        mergeNavbar: true,
+        // 搜索
         search: {
-          // 搜索
           paths: "auto",
-          placeholder: "🔍 Type to search ",
-          noData: "😞 No Results! ",
+          placeholder: "🔍 Search ",
+          noData: "没有结果！",
           depth: 6,
         },
+        // plantuml使用默认皮肤
         plantuml: {
-          // plantuml使用默认皮肤
           skin: "default",
+        },
+        //字数插件
+        count: {
+          countable: true,
+          fontsize: "0.9em",
+          color: "rgb(90,90,90)",
+          language: "chinese",
+        },
+        // 分页导航插件
+        pagination: {
+          previousText: "上一卷",
+          nextText: "下一卷",
+          crossChapter: true,
+          crossChapterText: true,
+        },
+        // 文本高亮
+        "flexible-alerts": {
+          style: "flat",
+          note: {
+            label: "信息",
+          },
+          tip: {
+            label: "提示",
+          },
+          warning: {
+            label: "注意",
+          },
+          attention: {
+            label: "切记",
+          },
+        },
+        sidebarDisplayLevel: 1,
+        // 页脚信息插件
+        loadFooter: true,
+        loadFooter: "_footer.md",
+        // 分享插件
+        share: {
+          reddit: true,
+          linkedin: true,
+          facebook: true,
+          twitter: true,
+          whatsapp: true,
+          telegram: true,
         },
       };
     </script>
-    <!-- Docsify v4 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+
+    <!-- docsify的js依赖 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <!-- 搜索依赖 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
+    <!-- 字数插件 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify-count@latest/dist/countable.min.js"></script>
+    <!-- 分页导航 -->
+    <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <!-- 文本高亮 -->
+    <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script>
+    <!-- 侧边栏扩展与折叠 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+    <!-- 页脚信息 -->
+    <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
+    <!-- 图片放大缩小支持 -->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+    <!-- 分享插件 -->
+    <script src="//unpkg.com/docsify-share/build/index.min.js"></script>
+    <!-- plugins -->
   </body>
 </html>
