--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"
     />
+    <style>
+      .markdown-section h3 {
+        margin-top: 50px;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
@@ -106,12 +111,9 @@
     <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script>
     <!-- 侧边栏扩展与折叠 -->
     <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-    <!-- 页脚信息 -->
-    <script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
     <!-- 图片放大缩小支持 -->
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
     <!-- 分享插件 -->
     <script src="//unpkg.com/docsify-share/build/index.min.js"></script>
-    <!-- plugins -->
   </body>
 </html>
