--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
         name: "ZXW学习笔记",
         // 点击标题后的跳转地址
         nameLink: "/",
-        // github地址
-        repo: "https://github.com/rameosu/rameo",
         // 切换页面后跳回页面顶部
         auto2top: true,
         // 侧边栏左侧的logo
-        logo: "",
+        logo: "./images/logo.png",
         // 是否开启侧边栏
         loadSidebar: true,
         // 读取md文件中最大几级目录
